# nse_data_download

./: .gitignore  README.md  SETUP_COMPLETE.md  analyze_existing_files.py  cSpell.json  download_nse_bhavcopy.py  indian_holidays.py  pyproject.toml  requirements.txt
news_agent/: gemini_agent.py  test_search_query.py
news_ingestion/: pdf_ingest.py  test_search_query.py
