[project]
name = "nse-data-download"
version = "0.1.0"
description = "Automated NSE Bhavcopy data downloader"
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.15.0",
    "pandas>=2.0.0",
    "webdriver-manager>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
